# Radnaev_Labs

./: CMakeCache.txt  CMakeLists.txt  CMakelist.txt  LWSS.txt  Makefile  README.md  cmake_install.cmake  data.txt  glider.txt  gun.txt  lab01  life.cpp  life.h  main.cpp  output.csv
huffman_code/: CMakelist.txt  data.txt  decode.txt  huffman_code.cpp  huffman_code.hpp  huffman_node.cpp  huffman_node.hpp  main.cpp  output  output.txt  res
lab04/: CMakeLists.txt  CSVParser.h  CSV_iterator.h  main.cpp
lab05_qtparabola/: Makefile  gtest_dependency.pri  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moc_mainwindow.cpp  qpainterwid.cpp  qpainterwid.h  try_2  try_2.pro  ui_mainwindow.h
